# pyfile_spec

./: .env  README.md  README.rst  setup.cfg  setup.py
examples/: excel_1.xlsx  ~$excel_1.xlsx
file_readers/: __init__.py  excel_file_reader.py  filespec.py  filespec_finder.py  fwf_file_reader.py  generic_reader.py  pandas_excel_reader.py  reader_registry.py
sample_data/: example-multi-dimensional-data.xlsx  excel_1.xlsx
src/file_spec/: __init__.py  base_reader.py  excel_file_reader.py  filespec.py  filespec_registry.py  fwf_file_reader.py  generic_reader.py  registry.py
tests/: 01_filespec_test.py  02_registry_test.py  03_excel_test.py  04_fwf_file_test.py  fwf_test-x.py  multi_fwf_test-x.py  pytest.ini  test_excel.py  test_filespec.py  test_filespec_finder.py  test_fwf.py  test_generic_reader.py  test_multi_fwf.py
tests/data/: file.20180601.txt  file.20180602.txt  file.20180603.txt  file.20180604.txt  file.20180606.txt  file.20180607.txt  file.20180631.txt
tests/file_spec/: 01_filespec_test.py  02_registry_test.py  03_excel_test.py  04_fwf_file_test.py  06_generic_reader_test-x.py  multi_fwf_test-x.py
tests/file_spec/data/: file.20180605.txt  file.20180609.txt
tests/mod_data/: _m009-will-throw-an-error.py  _mod_ignore.py  m001-some-name.py  readme.txt
