[options]
requires_python = >=3.7, <4
install_requires =
    # file://../pyfwf_db
    # git+https://github.com/jdonnerstag/pyfwf_db.git
    deprecated
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pylint
    pytest
    black
    tox
    check-manifest
    numpy
    pandas
    openpyxl

[metadata]
name = pyfile_spec
description = Consistently access data files in different formats
url = https://github.com/jdonnerstag/pyfile_spec
author = Juergen Donnerstag
author_email = juergen.donnerstag@gmail.com
keywords =
    python
    files
    specifications
    repository
